--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -90,6 +90,7 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/keyline_small"
       android:textSize="16sp"
+      android:lineSpacingExtra="8dp"
       app:layout_constraintTop_toBottomOf="@+id/tv_item3_desc"
       tools:text="OOO"/>
 
