--- a/app/src/main/res/layout/fragment_trainer_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_trainer_edit_profile.xml
@@ -3,13 +3,18 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:padding="@dimen/keyline_normal">
+  android:layout_height="match_parent">
 
   <android.support.design.widget.TextInputLayout
     android:id="@+id/edit_name_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/keyline_normal"
+    android:layout_marginLeft="@dimen/keyline_normal"
+    android:layout_marginRight="@dimen/keyline_normal"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
     <android.support.design.widget.TextInputEditText
       android:id="@+id/edit_name"
@@ -24,6 +29,10 @@
     android:id="@+id/edit_education_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/keyline_normal"
+    android:layout_marginRight="@dimen/keyline_normal"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/edit_name_layout">
 
     <android.support.design.widget.TextInputEditText
@@ -39,6 +48,7 @@
     android:id="@+id/edit_awards_layout"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/keyline_normal"
     android:layout_marginRight="@dimen/keyline_small"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toLeftOf="@+id/btn_add_award"
@@ -57,6 +67,7 @@
     android:id="@+id/btn_add_award"
     android:layout_width="40dp"
     android:layout_height="40dp"
+    android:layout_marginRight="@dimen/keyline_normal"
     android:background="?attr/selectableItemBackground"
     android:src="@drawable/ic_add_white_24dp"
     android:tint="@color/colorAccent"
@@ -68,13 +79,18 @@
     android:id="@+id/awards_list"
     android:layout_width="match_parent"
     android:layout_height="0dp"
+    android:layout_marginLeft="@dimen/keyline_normal"
+    android:layout_marginRight="@dimen/keyline_normal"
     app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/edit_awards_layout"/>
 
   <android.support.design.widget.FloatingActionButton
     android:id="@+id/fab"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/keyline_normal"
     android:src="@drawable/ic_save_white_24dp"
     app:fabSize="normal"
     app:layout_constraintBottom_toBottomOf="parent"
